--- a/ukazka_barvy_js.html
+++ b/ukazka_barvy_js.html
@@ -54,7 +54,7 @@ $(document).ready(function() {
 	<div id="namichanaBarva"></div>
  
  
-	<p>Vyber barvy:</p>	
+	<p>Vyběr barvy:</p>	
 	 
 	<form>	 
 
