--- a/web/index.html
+++ b/web/index.html
@@ -117,7 +117,7 @@
         <figure>	
 				<div class="tlacitko">
 					
-				  <ul class="button" >
+				  <ul class="buttonApp" >
 					<li >
 						
 						<img src="images/tlacitko_na.png"  onclick="doSwitch()" id="imgButton">
